[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Hand_Sprite_Open.png" type="Texture" id=1]
[ext_resource path="res://Arm.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ArmSegment_Sprite.png" type="Texture" id=3]
[ext_resource path="res://Scene/Torch.tscn" type="PackedScene" id=5]
[ext_resource path="res://SpriteSwap.gd" type="Script" id=6]
[ext_resource path="res://Grabbable.gd" type="Script" id=7]
[ext_resource path="res://GameController.gd" type="Script" id=8]
[ext_resource path="res://Sprites/light.png" type="Texture" id=9]
[ext_resource path="res://Sprites/background.png" type="Texture" id=10]
[ext_resource path="res://Scene/ExitSign.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.4425, 146.375 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.15, 126.437 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 208, 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.313726, 0.313726, 0.313726, 1 )

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
scale = Vector2( 128, 128 )
texture = ExtResource( 10 )

[node name="Arm" type="Position2D" parent="."]
position = Vector2( 477.43, 628.235 )
rotation = -0.87301
script = ExtResource( 2 )
flipped = false

[node name="Bicep_Arm" type="Sprite" parent="Arm"]
position = Vector2( 62.749, 13.468 )
scale = Vector2( 1.11063, 0.7 )
texture = ExtResource( 3 )

[node name="Joint1" type="Position2D" parent="Arm"]
position = Vector2( 189.982, 13.066 )

[node name="Forearm_Arm" type="Sprite" parent="Arm/Joint1"]
position = Vector2( 95.375, -0.35 )
scale = Vector2( 0.839895, 0.7 )
texture = ExtResource( 3 )

[node name="Joint2" type="Position2D" parent="Arm/Joint1"]
position = Vector2( 202.389, 0 )

[node name="Hand" type="Position2D" parent="Arm/Joint1/Joint2"]
position = Vector2( 60.574, -3.364 )

[node name="Hand_Arm" type="Sprite" parent="Arm/Joint1/Joint2/Hand"]
position = Vector2( 2.23138, -14.2555 )
rotation = 0.527911
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="HandRB" type="RigidBody2D" parent="Arm/Joint1/Joint2/Hand"]
collision_layer = 2147483649
collision_mask = 2147483649
mode = 3

[node name="HandCollision" type="CollisionPolygon2D" parent="Arm/Joint1/Joint2/Hand/HandRB"]
modulate = Color( 0.843137, 0.0862745, 0.0862745, 1 )
polygon = PoolVector2Array( -78.3027, -32.2124, -18.8139, -119.383, 17.3148, -68.885, 99.8619, -59.3809, 90.1991, 37.8006, 59.7177, 77.548, -78.0759, 42.1752 )

[node name="GrabPos" type="Position2D" parent="Arm/Joint1/Joint2/Hand"]
position = Vector2( 10.0934, -89.2561 )

[node name="Torch" type="RigidBody2D" parent="."]
position = Vector2( 900.85, 398.437 )
z_index = 1
contact_monitor = true
applied_torque = 3.652
script = ExtResource( 7 )

[node name="Torch2" parent="Torch" instance=ExtResource( 5 )]
position = Vector2( 2.67029e-05, -0.26001 )

[node name="Light2D2" type="Light2D" parent="Torch/Torch2"]
position = Vector2( 6.62691, -102.717 )
texture = ExtResource( 9 )
color = Color( 0.811765, 0.65098, 0.47451, 1 )
energy = 1.38
mode = 2

[node name="Detector" type="Area2D" parent="Torch"]
position = Vector2( 0.425, -0.26 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Torch/Detector"]
position = Vector2( 1.45435e-05, 9.82299 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torch"]
position = Vector2( 0.424988, 17.563 )
shape = SubResource( 2 )

[node name="Exit Sign" parent="." instance=ExtResource( 11 )]
position = Vector2( 101.059, 52.1864 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 840, 592 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )
